--- a/edit.html
+++ b/edit.html
@@ -10,229 +10,7 @@
     <meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-
-    <style>
-        body {
-            background-color: white;
-        }
-        .center-container {
-            max-width: 500px;
-            margin: auto;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            border-radius: 10px;
-            background: white;
-        }
-        .modal-body-scroll {
-    max-height: 400px; /* Set the maximum height */
-    overflow-y: auto;  /* Enable vertical scrolling */
-}
-
-/* Fixed Circular Images */
-.fixed-image, .circular-img {
-    width: 55px;
-    height: 60px;
-    object-fit: contain;
-    border-radius: 50%;
-}
-
-/* First Navbar - Contains images and text */
-/* First Navbar - Contains images and text */
-.first-navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1030; /* Ensures it stays above other content */
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    background-color: #f8f9fa; /* Light background */
-}
-
-/* Second Navbar - Contains menu items */
-.second-navbar {
-    position: fixed;
-    top: 60px; /* Positioned right below the first navbar */
-    width: 100%;
-    z-index: 1029; /* Slightly lower than the first navbar */
-    display: flex;
-    padding: 24px 14px;
-    background-color: #f8f9fa; /* Light background */
-    height: 50px;
-}
-
-.second-navbar .navbar-nav .nav-item {
-    margin-right: 20px; /* Adds space between each nav item */
-}
-
-.second-navbar .navbar-nav .nav-item:last-child {
-    margin-right: 0; /* Removes margin from the last item for alignment */
-}
-
-/* Center align menu toggler on mobile */
-.navbar-toggler {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-/* Menu link styles */
-.navbar-nav .nav-item .nav-link {
-    color: #343a40 !important; /* Dark text color */
-    line-height: 1.8;
-    transition: color 0.3s ease, background-color 0.3s ease;
-}
-
-/* Hover effect for link */
-.navbar-nav .nav-item .nav-link:hover {
-    color: #e4e8ec !important; /* Slightly darker on hover */
-    background-color: rgba(255, 254, 254, 0.5) !important;
-}
-/* Mobile view - Keep background light */
-@media (max-width: 992px) {
-    .navbar-collapse {
-        background-color: #f8f9fa; /* Light background for mobile menu */
-    }
-
-    .navbar-nav .nav-item .nav-link {
-        color: #343a40 !important; /* Dark text color */
-    }
-
-    .navbar-toggler-icon {
-        filter: invert(1); /* Dark toggler icon for light background */
-    }
-}
-
-/* Large screen styles */
-@media (min-width: 992px) {
-    .navbar-collapse {
-        justify-content: center;
-    }
-
-    /* Hide the toggler on large screens */
-    .navbar-toggler {
-        display: none;
-    }
-}
-/* Cancel button styles */
-.cancel-btn {
-    display: none; /* Hidden by default */
-    background: transparent;
-    border: none;
-    font-size: 1.5rem; /* Adjust size as needed */
-    color: #dbe2e8; /* Color of the icon */
-    position: absolute;
-    top: 10px; /* Adjust top position */
-    right: 10px; /* Adjust right position */
-    cursor: pointer;
-}
-/*to hide the menu icon*/
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-/* Show the cancel button in mobile view */
-@media (max-width: 992px) {
-    .cancel-btn {
-        display: block; /* Show when navbar is toggled */
-    }
-}
-/* Hide the menu icon by default when navbar is shown */
-.navbar-toggler-icon.hidden {
-    display: none;
-}
-.hidden {
-    display: none !important; /* Forcefully hide the element */
-}
-
-/* Additional spacing for page content */
-body {
-    padding-top: 120px; /* Ensures content doesn’t overlap with fixed navbars */
-}
-
-
-button {
-            padding: 10px 15px;
-            background-color: #202122;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #a6a6a9;
-        }
-    .footer {
-  background: #f8f9fa;
-  color: #343a40;
-  padding: 10px;
-  text-align: center;
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically */
-  flex-direction: column;  /* Stack items vertically */
-}
-
-.footer .row {
-  width: 100%; /* Ensure row takes up the full width */
-  display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center;     /* Center vertically if necessary */
-  margin: 0;
-}
-
-.footer .col {
-  padding: 0;
-  text-align: center; /* Ensure content in columns is centered */
-}
-
-.footer p {
-  margin: 0;
-}
-
-.footer a {
-  color: #007bff;
-  text-decoration: none;
-}
-
-.footer i {
-  font-size: 24px;
-}
-/* Close button styling */
-.close-btn {
-    display: block;
-    width: 100px;
-    margin: 20px auto;
-    text-align: center;
-    background-color: #dc3545;
-    color: white;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    font-size: 16px;
-    cursor: pointer;
-}
-    #myBtn {
-  display: none;
-  position: fixed;
-  bottom: 15px;
-  right: 30px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: rgb(210, 210, 233);
-  color: white;
-  cursor: pointer;
-  padding: 15px;
-  border-radius: 4px;
-}
-
-#myBtn:hover {
-  background-color: #555;
-}
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <!-- First Navbar (Images and Admin Dashboard Text) -->
@@ -250,9 +28,9 @@ button {
   <!-- Second Navbar (Navbar Items) -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
     <!-- Toggler for mobile view -->
-    <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+    <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
         <span class="navbar-toggler-icon"></span> <!-- Menu Icon -->
-    </button>
+    </div>
     <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button> <!-- Cancel Icon -->
     
   
@@ -564,250 +342,6 @@ button {
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <script>
-function toggleNavbar() {
-    const navbarNav = document.getElementById("navbarNav");
-    const cancelButton = document.querySelector(".cancel-btn");
-    const menuIcon = document.querySelector(".navbar-toggler-icon");
-
-    if (navbarNav.classList.contains("show")) {
-        navbarNav.classList.remove("show");
-        cancelButton.style.display = "none";
-        menuIcon.classList.remove("hidden");
-    } else {
-        navbarNav.classList.add("show");
-        cancelButton.style.display = "block";
-        menuIcon.classList.add("hidden");
-    }
-}
-
-let studentToDelete = null;
-
-function loadClassOptions() {
-    $.ajax({
-        url: '/api/getClasses',
-        method: 'GET',
-        success: function(classes) {
-            const classSelection = $('#class-selection');
-            classSelection.empty();
-            classSelection.append('<option value="" selected disabled>Select Class</option>');
-            classes.forEach(c => {
-                classSelection.append(`<option value="${c}">${c}</option>`);
-            });
-        },
-        error: function(jqXHR, textStatus, errorThrown) {
-            console.error('Failed to load classes:', textStatus, errorThrown);
-            alert('Error loading classes. Please check the console for more details.');
-        }
-    });
-}
-
-function loadStudents(className) {
-    $.ajax({
-        url: '/api/getStudents',
-        method: 'POST',
-        data: JSON.stringify({ class: className }),
-        contentType: 'application/json',
-        success: function(students) {
-            const studentList = $('#student-list');
-            studentList.empty();
-            if (students.length > 0) {
-                students.forEach(student => {
-                    studentList.append(`
-                        <li>
-                            ${student.studentID} - ${student.firstname}  ${student.surname} ${student.othername ? student.othername + ' ' : ''} - ${student.guardianPhone}
-                            <div class="action-buttons">
-                                <button class="edit-btn btn-warning" data-id="${student.studentID}" data-firstname="${student.firstname}" data-othername="${student.othername}" data-surname="${student.surname}" data-guardianphone="${student.guardianPhone}" data-class="${student.class}" data-subjects="${student.subjects}" data-studentPicture="${student.picture}">Edit</button>
-                                <button class="delete-btn btn-danger" data-id="${student.studentID}">Delete</button>
-                            </div>
-                        </li>
-                    `);
-                });
-            } else {
-                studentList.append('<li>No students found in this class.</li>');
-            }
-        },
-        error: function() {
-            alert('Error loading students.');
-        }
-    });
-}
-
-$(document).on('click', '.delete-btn', function() {
-    studentToDelete = $(this).data('id');
-    $('#confirmation-modal').show();
-});
-
-$('#confirm-delete').click(function() {
-    const usernameInput = $('#admin-username-input').val();
-    const passwordInput = $('#admin-password-input').val();
-    if (usernameInput && passwordInput) {
-        deleteStudent(studentToDelete, usernameInput, passwordInput);
-    } else {
-        alert('Please enter your Username and Password.');
-    }
-});
-
-function deleteStudent(studentId, username, password) {
-    $.ajax({
-        url: `/api/deleteStudent/${studentId}`,
-        method: 'DELETE',
-        contentType: 'application/json',
-        data: JSON.stringify({ username, password }),
-        success: function(response) {
-            alert(response.message);
-            $('#confirmation-modal').hide();
-            loadStudents($('#class-selection').val());
-        },
-        error: function(error) {
-            alert(error.responseJSON?.message || 'Error deleting student.');
-        }
-    });
-}
-
-$(document).on('click', '.edit-btn', function() {
-    const studentData = $(this).data();
-    $('#edit-student-id').val(studentData.id);
-    $('#edit-firstname').val(studentData.firstname);
-    $('#edit-othername').val(studentData.othername || '');
-    $('#edit-surname').val(studentData.surname);
-    $('#edit-guardian-phone').val(studentData.guardianphone);
-    $('#formClass').val(studentData.class);
-
-    $('input[name="subjects"]').prop('checked', false);
-    const subjects = studentData.subjects ? studentData.subjects.split(',') : [];
-    subjects.forEach(subject => {
-        $(`input[name="subjects"][value="${subject.trim()}"]`).prop('checked', true);
-    });
-
-    $('#edit-modal').show();
-});
-
-$('#confirm-edit').click(function() {
-    $('#edit-modal').hide();
-    $('#edit-confirmation-modal').show();
-});
-
-$('#confirm-edit-save').click(function() {
-    const confirmationInput = $('#admin-email-input-edit').val();
-    const passwordInput = $('#admin-password-input-edit').val();
-
-    if (confirmationInput && passwordInput) {
-        const updatedStudent = {
-            id: $('#edit-student-id').val(),
-            firstname: $('#edit-firstname').val().trim().toUpperCase(),
-            othername: $('#edit-othername').val().trim().toUpperCase(),
-            surname: $('#edit-surname').val().trim().toUpperCase(),
-            guardianPhone: $('#edit-guardian-phone').val(),
-            studentClass: $('#formClass').val(),
-            subjects: $('input[name="subjects[]"]:checked').map(function() {
-                return $(this).val();
-            }).get().join(','), // Collect selected subjects as a comma-separated string
-            picture: $('#studentPicture').prop('files')[0] || null
-        };
-
-        // Remove empty or unchanged fields before sending the object
-        Object.keys(updatedStudent).forEach(key => {
-            if (!updatedStudent[key] || updatedStudent[key] === '') {
-                delete updatedStudent[key];
-            }
-        });
-
-        editStudent(updatedStudent, confirmationInput, passwordInput);
-    } else {
-        alert('Please enter your Staff ID/Email and Password.');
-    }
-});
-
-function editStudent(student, staffEmailOrID, password) {
-    const formData = new FormData();
-    formData.append('staffEmailOrID', staffEmailOrID);
-    formData.append('password', password);
-    Object.keys(student).forEach(key => {
-        if (student[key] !== undefined && student[key] !== null) {
-            formData.append(key, student[key]);
-        }
-    });
-
-    $.ajax({
-        url: '/api/editStudent',
-        method: 'POST',
-        data: formData,
-        contentType: false,
-        processData: false,
-        success: function(response) {
-            $('#edit-confirmation-modal').hide();
-            loadStudents($('#class-selection').val());
-            alert(response.message || 'Student updated successfully.');
-        },
-        error: function(err) {
-            console.error('Update failed:', err);
-            alert(err.responseJSON?.message || 'Error updating student.');
-        }
-    });
-}
-// Make sure `subjects` field is collected as a comma-separated string
-const updatedStudent = {
-    id: $('#edit-student-id').val(),
-    firstname: $('#edit-firstname').val().trim().toUpperCase(),
-    othername: $('#edit-othername').val().trim().toUpperCase(),
-    surname: $('#edit-surname').val().trim().toUpperCase(),
-    guardianPhone: $('#edit-guardian-phone').val(),
-    class: $('#formClass').val(),
-    subjects: $('input[name="subjects"]:checked').map(function() { return this.value; }).get().join(','),
-    picture: $('#studentPicture').prop('files')[0]
-};
-
-$(document).ready(function () {
-    // Load class options into the dropdown
-    loadClassOptions();
-
-    // Event handler for "View Students" button
-    $('#view-students').click(function () {
-        const classSelection = $('#class-selection').val();
-        const selectedClassText = $('#class-selection option:selected').text();
-
-        if (classSelection) {
-            // Load students for the selected class
-            loadStudents(classSelection);
-
-            // Hide class selection and show selected class header
-            $('#select-class-header, #view-students, #class-label, #class-selection').hide();
-            $('#selected-class-header')
-                .addClass('small text-muted')
-                .text(`Class: ${selectedClassText} Students`)
-                .show();
-            $('#back-to-selection').show();
-        } else {
-            alert('Please select a class.');
-        }
-    });
-
-    // Event handler for "Back to Class" button
-    $('#back-to-selection').click(function () {
-        // Reset to initial view
-        $('#selected-class-header').hide().removeClass('small text-muted');
-        $('#select-class-header, #view-students, #class-label, #class-selection').show();
-        $('#back-to-selection').hide();
-        $('#student-list').empty(); // Clear student list
-    });
-});
-
-window.onscroll = function() { scrollFunction() };
-
-function scrollFunction() {
-    document.getElementById("myBtn").style.display = document.body.scrollTop > 20 || document.documentElement.scrollTop > 20 ? "block" : "none";
-}
-
-function topFunction() {
-    document.body.scrollTop = 0;
-    document.documentElement.scrollTop = 0;
-}
-
-    // Close button functionality
-function goBack() {
-window.history.back();
-}
-</script>
+    <script src="edit.js"></script>
 </body>
 </html>
