--- a/student_management.html
+++ b/student_management.html
@@ -72,8 +72,8 @@
             View Results
           </button>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="view.html">View Terminal Results</a></li>
-            <li><a class="dropdown-item" href="sessionResult.html">View Sessional Results</a></li>
+            <li><a class="dropdown-item" href="view.html">Term Results</a></li>
+            <li><a class="dropdown-item" href="sessionResult.html">Session Results</a></li>
           </ul>
         </div>
       </div>
