--- a/resultmanagement.html
+++ b/resultmanagement.html
@@ -112,13 +112,14 @@
                 </tbody>
             </table>
             <!-- Submit Scores Button -->
-            <button id="submit-scores" class="btn btn-success" style="margin-top: 20px; margin-left: 40%;" onclick="submitScores()">Submit Scores</button>
+            <button id="submit-scores" class="btn btn-success" style="margin-top: 20px; margin-left: 33%;" onclick="submitScores()">Submit Scores</button>
         </div>
         <div id="no-students-message" style="display: none;">
             <p>No students found in this class.</p>
         </div>
     </div>
 </div></div>
+<button class="close-btn text-center" onclick="goBack()">Close</button>
 
 </div>
 <br>
