--- a/student_session_result.html
+++ b/student_session_result.html
@@ -22,9 +22,9 @@
 
 <!-- Second Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-light text-dark second-navbar">
-  <button class="navbar-toggler" type="button" onclick="toggleNavbar()">
+  <div class="navbar-toggler" type="button" onclick="toggleNavbar()">
       <span class="navbar-toggler-icon"></span>
-  </button>
+  </div>
   <button class="cancel-btn" style="display:none;" onclick="toggleNavbar()">×</button>
   <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
@@ -115,20 +115,6 @@
    <!-- Bootstrap JS, Popper.js, and jQuery -->
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-   <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const studentIDField = document.getElementById("studentID");
-        const storedStudentID = sessionStorage.getItem("studentID");
-
-        if (storedStudentID) {
-            studentIDField.value = storedStudentID; // Populate the field with the stored Student ID
-            studentIDField.disabled = true; // Disable the field to prevent editing
-        } else {
-            alert("No Student ID found. Please return to the previous page.");
-            window.history.back(); // Go back if no Student ID is found
-        }
-    });
-</script>
 <script src="student_seesion.js"></script>
 </body>
 </html>
