--- a/view.html
+++ b/view.html
@@ -55,7 +55,6 @@
 
     <div id="classSelection" class="card shadow mt-4 p-4">
         <div class="form-group">
-            <label for="class-selection">Class:</label>
             <select id="class-selection" name="class" class="form-control" required>
                 <option value="" selected disabled>Select Class</option>
             </select>
@@ -82,16 +81,34 @@
         <button id="view-students" type="button" class="btn btn-success">View Students</button>
         
     </div>
-
-    <!-- Back to Class Selection button -->
-    <button id="back-to-selection" type="button" class="btn btn-success mt-3" style="display: none;">Back to Class Selection</button>
-
-    <h4 id="selected-class-header" class="mt-4" style="display: none;"></h4>
-    <ul id="student-list" class="list-unstyled"> 
-    </ul>
-    <button class="close-btn text-center" onclick="goBack()">Close</button>
+  <!-- New button to go back to class selection -->
+  <div class="row mt-3">
+    <div class="col-6" id="back-to-selection" style="display:none;">
+      <!-- Back to Class Selection button -->
+      <button type="button" class="btn btn-success">Back to Selection</button>
+    </div>
+    <div class="col-6" id="search-button" style="display:none;">
+      <!-- Search Section -->
+<div class="search-container">
+    <div class="form-group">
+        <input type="text" id="filter-students" placeholder="Search students by name or ID..." style="display:none; width: 100%; padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px;">
+    </div>
 </div>
+    </div>
+  </div>
+  
+ 
 
+<!-- Placeholder for the selected class name -->
+<h1 class="text-center  bg-white" id="selected-class-header" class="mt-4"></h1>
+
+    
+
+    <!-- List of students will appear here -->
+    <ul id="student-list" class="list-unstyled"></ul>
+    <button class="close-btn text-center" onclick="goBack()">Close</button>
+
+</div>
 <!-- Footer -->
 <div class="footer bg-light mt-5">
     <div class="row text-center py-3">
