--- a/staff_management.html
+++ b/staff_management.html
@@ -75,11 +75,16 @@
 
 <!-- Staff Management Section -->
 <div id="staffManagementSection">
-
+    <div class="search-container" style="width: 100%; max-width: 350px; margin: 0 auto;">
+        <input type="text" id="filter-staff" placeholder="Search staff by name or ID..." style="width: 100%; padding: 10px;">
+    </div>
     <h2>Staff List</h2>
     <div id="staffList"></div> <!-- Placeholder for Staff List -->
-
-    <h2 class="mt-4">Admin List</h2>
+    <div class="search-container" style="width: 100%; max-width: 350px; margin: 0 auto;">
+        <input type="text" id="filter-admins" placeholder="Search admins by name or ID..." style="width: 100%; padding: 10px;">
+    </div>
+    
+    <h2 class="mt-1">Admin List</h2>
     <div id="adminList"></div> <!-- Placeholder for Admin List -->
 
     <!-- Add Staff and Admin Buttons -->
