--- a/extra-curriculum-assessment.html
+++ b/extra-curriculum-assessment.html
@@ -91,6 +91,12 @@
         <!-- Student List and Assessments -->
         <div id="studentList" style="display: none;">
             <p class="text-center">Please evaluate each student on a scale of 1 to 5, considering their conduct and overall development.</p>
+             <!-- Search Section -->
+             <div class="search-container">
+                <div class="form-group text-center">
+                    <input type="text" id="filter-students" placeholder="Search students by name or ID..." style="display:none; width: 100%; padding: 8px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 4px;">
+                </div>
+            </div>
             <div id="studentsContainer" class="container">
                 <!-- Dynamically populated student assessment forms will appear here -->
             </div>
