--- a/add.html
+++ b/add.html
@@ -93,7 +93,17 @@
           </select>
         </div>
       </div>
-
+ <!-- Gender -->
+ <div class="form-row">
+  <div class="form-group col-md-6">
+    <label for="gender" class="form-label">Gender</label><br>
+    <select class="form-select" id="gender" name="gender" required>
+      <option value="" disabled selected>Select Gender</option>
+      <option value="Male">Male</option>
+      <option value="Female">Female</option>
+    </select>
+</div>
+</div>
      <div class="form-group">
     <label>Subjects</label><br>
 
